add random joke button and stylized it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrapper">
+        <span>&#128514;</span>
+        <p id="joke">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Omnis voluptas natus, eaque odio nostrum neque, perspiciatis
+              laboriosam dolore repellat iure facilis corrupti sit iusto ducimus,
+               laudantium magni nisi quisquam rerum.
+        </p>
+        <button id="btn">Get Random Joke</button>
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
