--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 <body>
     <div class="wrapper">
         <span>&#128514;</span>
-        <p id="joke">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Omnis voluptas natus, eaque odio nostrum neque, perspiciatis
-              laboriosam dolore repellat iure facilis corrupti sit iusto ducimus,
-               laudantium magni nisi quisquam rerum.
-        </p>
+        <p id="joke"></p>
         <button id="btn">Get Random Joke</button>
     </div>
 
